[project]
name = "travelplanner"
version = "0.1.0"
description = "Fork of 'TravelPlanner: A Benchmark for Real-World Planning with Language Agents'. Meant to explore long horizon planning approaches"
readme = "README.md"
authors = [
    { name = "Kunal Suri", email = "kunal.suri.ml.experiments@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "func-timeout>=4.3.5",
    "google-genai>=1.8.0",
    "gradio>=5.23.1",
    "litellm>=1.65.1",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "tiktoken>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travelplanner"]
